<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8EDBE4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/medium"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/area"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_bmi"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/bmiii"
            android:src="@drawable/icbmi1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Triangle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="@color/lightblue"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:paddingBottom="30dp"
            android:src="@drawable/trianglee"
            android:contentDescription="@string/trianglee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bold1"
            android:text="@string/triangle"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Square"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:paddingBottom="30dp"
            android:src="@drawable/squre"
            android:contentDescription="@string/squaree" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bold1"
            android:text="@string/square"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Circle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="520dp"
        android:backgroundTint="@color/red"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:paddingBottom="30dp"
            android:src="@drawable/circle"
            android:contentDescription="@string/circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bold1"
            android:text="@string/circle"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Rectangle"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/purple"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/rectangle"
            android:paddingBottom="30dp"
            android:src="@drawable/rectangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bold1"
            android:text="@string/rectangle"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>